--- a/intex.html
+++ b/intex.html
@@ -11,7 +11,11 @@
         <h1>
             Hello World, I'm back again.
         </h1>
-        <h1> Allahor nam niye shuru korlam abar
+        <h1> 
+            Allahor nam niye shuru korlam abar
+        </h1>
+        <h1>
+            Hello ki obostha
         </h1>
     </div>
 </body>
