--- a/intex.html
+++ b/intex.html
@@ -19,6 +19,7 @@
             Hello ki obostha
         </h1>
         <p> Allahor rohomote onek valo achi</p>
+        <p> Allah </p>
     </div>
 </body>
 </html>
